OO-367 fix wrong alignment of download link in cp peek view

--- a/src/main/webapp/static/themes/openolat/all/modules/_course.scss
+++ b/src/main/webapp/static/themes/openolat/all/modules/_course.scss
@@ -99,7 +99,6 @@ div.o_sp_peekview {
 	margin: 1em 0 1em 0;
 	ul { list-style: none; }
 	li { margin-top: 0.5em;}
-	a { position: relative; left: -20px; }
 }
 
 div.o_peekview_author { padding: 3px 0 5px 0; font-style: italic; color: #aaaaaa; font-size: 90%;}
